--- a/style.css
+++ b/style.css
@@ -10,13 +10,19 @@
 
 #led-6,
 #led-1,
-#led-11,
-.led-videoproiector {
+#led-11 {
     width: 24px;
     height: 24px;
     margin-bottom: 15px;
     border-radius: 50%;
     box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #808002 0 -1px 9px, #FF0 0 2px 12px;
+}
+
+div#container-incalzire {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+    border-bottom: 1px solid gray;
 }
 
 .container-lumina-bazin,
